add plugin version

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,9 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.andrewi.cmlplugin</id>
+    <id>org.ai.cmlplugin</id>
     <name>CmlPlugin</name>
     <vendor>andrew--i</vendor>
+    <version>0.0.1</version>
 
     <depends>com.intellij.modules.platform</depends>
 
