--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>org.ai.cmlplugin</id>
-    <name>CmlPlugin</name>
+    <id>org.ai.cml</id>
+    <name>Cml</name>
     <vendor>andrew--i</vendor>
     <version>0.0.1</version>
 
